# 3sem_lab6

./: CMakeLists.txt  compile.sh  create_database.sql  database.cpp  database.hpp  furniture_store  insert_test_data.sql  main.cpp  models.cpp  models.hpp  queries.cpp  queries.hpp  queries.sql  schema.sql  test_data.sql
